# voxy

./: .gitattributes  Cargo.toml  README.md
assets/: character.vox  example.vox  shader.wgsl
examples/: game.rs
src/: asset.rs  lib.rs  mesh_asset.rs  scene.rs  voxel_material.rs  voxel_material.wgsl
