[package]
name = "voxy"
description = "Voxel engine for Bevy"
version = "0.2.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.14.2", features = ["file_watcher"] }
block-mesh = "0.2.0"
dot_vox = "5.1.1"
futures = "0.3.31"
ndshape = "0.3.0"
smol = "2.0.2"
uuid = "1.10.0"
